# stock-bots

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
bot/: fetch_data.py  post.py
bot/common/: client.py  fetch_data.py  message.py
bot/domestic/: post.py
bot/futures/: post.py
bot/international/: post.py
config/: settings.py
config/domestic/: settings.py
config/futures/: settings.py
config/international/: settings.py
scripts/: package.sh  run_bot.py
tests/: conftest.py  test_fetch_data.py  test_message_builder.py  test_post.py
tests/domestic/: test_domestic_post.py
tests/futures/: test_futures_post.py
tests/international/: test_international_post.py
